--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <hr>
       </div>
 
+      <!-- Fin de la première partie du menu  -->
+
+    <div class="sidebar">
 
 
       <a class="corps" href="#">
@@ -102,7 +105,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus s
         <hr>
         </a>
-
+</div>
 
 </aside>
 
