integration js + msg

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,13 @@
   <nav id="A1">
 
     <h2><i class="fa fa-bolt"></i></h2>
+    
+    <h5><a href ="#" rel="tooltip" data-original-title="Liste des contacts">
+       <i class="fa fa-bars"></i> 
+     </a></h5> 
+     <h5><a href ="#" rel="tooltip" data-original-title="Liste des conversations">
+       <i class="fa fa-comments"></i> 
+     </a></h5> 
 
     <h5><a href ="#" rel="tooltip" data-original-title="Paramètres de votre compte">
        <i class="fa fa-cog"></i> 
