--- a/www/index.html
+++ b/www/index.html
@@ -23,10 +23,10 @@
 
     <h2><i class="fa fa-bolt"></i></h2>
     
-    <h5><a href ="#" rel="tooltip" data-original-title="Liste des contacts">
+    <h5><a href ="#" rel="tooltip" data-original-title="Liste des contacts" onclick="showContact();" >
        <i class="fa fa-bars"></i> 
      </a></h5> 
-     <h5><a href ="#" rel="tooltip" data-original-title="Liste des conversations">
+     <h5><a href ="#" rel="tooltip" data-original-title="Liste des conversations" onclick="showMsg();">
        <i class="fa fa-comments"></i> 
      </a></h5> 
 
@@ -71,7 +71,7 @@
       <!-- Fin de la première partie du menu  -->
 
 <div class="content-area" id="B2">
-
+<div id="msg-list">
       <a class="corps" href="#">
         <h3> Rachelle Sanschagrin <span class="next"><i class="fa fa-angle-double-right"></i></span></h3>
        
@@ -155,6 +155,31 @@
         </a>
 </div>
 
+<div id="contact-list"  >
+  
+  <ul>
+    <li> <span class="size-ic connected"><i class="fa fa-circle"></i></span> Burnell Corbeil</li>
+    <li> <span class="size-ic"><i class="fa fa-circle-o"></i></span> Calvin Peterson</li>
+    <li><span class="size-ic connected"><i class="fa fa-circle "></i></span> Luce Déziel </li>
+    <li><span class="size-ic connected"><i class="fa fa-circle"></i></span> Christine Melanson </li>
+    <li><span class="size-ic"><i class="fa fa-circle-o"></i></span> Burnell Corbeil</li>
+    <li><span class="size-ic"><i class="fa fa-circle-o"></i></span> Calvin Peterson</li>
+    <li><span class="size-ic connected"><i class="fa fa-circle"></i></span> Luce Déziel </li>
+    <li><span class="size-ic"><i class="fa fa-circle-o"></i></span> Christine Melanson </li>
+        <li> <span class="size-ic connected"><i class="fa fa-circle"></i></span> Burnell Corbeil</li>
+    <li> <span class="size-ic"><i class="fa fa-circle-o"></i></span> Calvin Peterson</li>
+    <li><span class="size-ic connected"><i class="fa fa-circle "></i></span> Luce Déziel </li>
+    <li><span class="size-ic connected"><i class="fa fa-circle"></i></span> Christine Melanson </li>
+    <li><span class="size-ic"><i class="fa fa-circle-o"></i></span> Burnell Corbeil</li>
+    <li><span class="size-ic"><i class="fa fa-circle-o"></i></span> Calvin Peterson</li>
+    <li><span class="size-ic connected"><i class="fa fa-circle"></i></span> Luce Déziel </li>
+    <li><span class="size-ic"><i class="fa fa-circle-o"></i></span> Christine Melanson </li>
+  </ul>
+
+</div>
+
+</div>
+
 
 </aside>
 
@@ -163,7 +188,7 @@
     <div class="photo"><img src="./img/chat.png" alt="Profil" class="img-circle" /></div>
     <div class="description">
     <span class="titre">Rachelle Sanschagrin</span>
-    <p  class="connected"><strong>En ligne </strong></p>
+    <p  class="connected"><i class="fa fa-circle"></i> <strong>En ligne </strong></p>
     </div>
   
   </div>
@@ -172,98 +197,125 @@
 <div class="conversation" id="conver">
   
 <article class="interlocuteur">
-  <p>
+  <p class="msg">
     Définition : c’est une transformation de ressources dans le but de créer des biens et des services. Pour cela il va falloir coordonner et faire circuler des flux de création de valeurs, tout en assurant la ponctualité des rendez-vous avec le besoin client. 
 
   </p>
+  <p class="datetime"><i class="fa fa-check-square-o"></i> 10:16 - 10.02.2014</p>
 </article>
+
 <article class="intervenant">
-  <p>
+  <p class="msg">
    Une entreprise gagne de l’argent en transformant un produit et en se rémunerant sur cette transformation. La création de valeur pour une entreprise est de générer  un profit par le biais de la transformation de produit. 
    Les contraintes de temps se renforcent et la concurrence pousse l’entreprise à faire plus. L’entreprise est de plus en plus dépendante de son environnement. une réorganisation des méthodes de production et de management associées. 
    Les contraintes de temps se renforcent et la concurrence pousse l’entreprise à faire plus. L’entreprise est de plus en plus dépendante de son environnement. une réorganisation des méthodes de production et de management associées. 
   </p>
+  <p class="datetime"><i class="fa fa-check-square-o"></i> 10:16 - 10.02.2014</p>
 </article>
 
+
+
 <article class="interlocuteur">
-  <p>
+  <p class="msg">
     Définition : c’est une transformation de ressources dans le but de créer des biens et des services. Pour cela il va falloir coordonner et faire circuler des flux de création de valeurs, tout en assurant la ponctualité des rendez-vous avec le besoin client. 
 
   </p>
-</article>
-
-  
-<article class="interlocuteur">
-  <p>
-    Définition : c’est une transformation de ressources dans le but de créer des biens et des services. Pour cela il va falloir coordonner et faire circuler des flux de création de valeurs, tout en assurant la ponctualité des rendez-vous avec le besoin client. 
-
-  </p>
-</article>
-<article class="intervenant">
-  <p>
-   Une entreprise gagne de l’argent en transformant un produit et en se rémunerant sur cette transformation. La création de valeur pour une entreprise est de générer  un profit par le biais de la transformation de produit. 
-   Les contraintes de temps se renforcent et la concurrence pousse l’entreprise à faire plus. L’entreprise est de plus en plus dépendante de son environnement. une réorganisation des méthodes de production et de management associées. 
-   Les contraintes de temps se renforcent et la concurrence pousse l’entreprise à faire plus. L’entreprise est de plus en plus dépendante de son environnement. une réorganisation des méthodes de production et de management associées. 
-  </p>
-</article>
-
-<article class="interlocuteur">
-  <p>
-    Définition : c’est une transformation de ressources dans le but de créer des biens et des services. Pour cela il va falloir coordonner et faire circuler des flux de création de valeurs, tout en assurant la ponctualité des rendez-vous avec le besoin client. 
-
-  </p>
+  <p class="datetime"><i class="fa fa-check-square-o"></i> 10:16 - 10.02.2014</p>
 </article>
 
 
   
 <article class="interlocuteur">
-  <p>
+  <p class="msg">
     Définition : c’est une transformation de ressources dans le but de créer des biens et des services. Pour cela il va falloir coordonner et faire circuler des flux de création de valeurs, tout en assurant la ponctualité des rendez-vous avec le besoin client. 
 
   </p>
+  <p class="datetime"><i class="fa fa-check-square-o"></i> 10:16 - 10.02.2014</p>
 </article>
+
 <article class="intervenant">
-  <p>
+  <p class="msg">
    Une entreprise gagne de l’argent en transformant un produit et en se rémunerant sur cette transformation. La création de valeur pour une entreprise est de générer  un profit par le biais de la transformation de produit. 
    Les contraintes de temps se renforcent et la concurrence pousse l’entreprise à faire plus. L’entreprise est de plus en plus dépendante de son environnement. une réorganisation des méthodes de production et de management associées. 
    Les contraintes de temps se renforcent et la concurrence pousse l’entreprise à faire plus. L’entreprise est de plus en plus dépendante de son environnement. une réorganisation des méthodes de production et de management associées. 
   </p>
+  <p class="datetime"><i class="fa fa-check-square-o"></i> 10:16 - 10.02.2014</p>
 </article>
 
+
 <article class="interlocuteur">
-  <p>
+  <p class="msg">
     Définition : c’est une transformation de ressources dans le but de créer des biens et des services. Pour cela il va falloir coordonner et faire circuler des flux de création de valeurs, tout en assurant la ponctualité des rendez-vous avec le besoin client. 
 
   </p>
+  <p class="datetime"><i class="fa fa-check-square-o"></i> 10:16 - 10.02.2014</p>
 </article>
+
 
 
   
 <article class="interlocuteur">
-  <p>
+  <p class="msg">
     Définition : c’est une transformation de ressources dans le but de créer des biens et des services. Pour cela il va falloir coordonner et faire circuler des flux de création de valeurs, tout en assurant la ponctualité des rendez-vous avec le besoin client. 
 
   </p>
+  <p class="datetime"><i class="fa fa-check-square-o"></i> 10:16 - 10.02.2014</p>
 </article>
+
 <article class="intervenant">
-  <p>
+  <p class="msg">
    Une entreprise gagne de l’argent en transformant un produit et en se rémunerant sur cette transformation. La création de valeur pour une entreprise est de générer  un profit par le biais de la transformation de produit. 
    Les contraintes de temps se renforcent et la concurrence pousse l’entreprise à faire plus. L’entreprise est de plus en plus dépendante de son environnement. une réorganisation des méthodes de production et de management associées. 
    Les contraintes de temps se renforcent et la concurrence pousse l’entreprise à faire plus. L’entreprise est de plus en plus dépendante de son environnement. une réorganisation des méthodes de production et de management associées. 
   </p>
+  <p class="datetime"><i class="fa fa-check-square-o"></i> 10:16 - 10.02.2014</p>
 </article>
 
+
 <article class="interlocuteur">
-  <p>
+  <p class="msg">
     Définition : c’est une transformation de ressources dans le but de créer des biens et des services. Pour cela il va falloir coordonner et faire circuler des flux de création de valeurs, tout en assurant la ponctualité des rendez-vous avec le besoin client. 
 
   </p>
+  <p class="datetime"><i class="fa fa-check-square-o"></i> 10:16 - 10.02.2014</p>
 </article>
-<article class="intervenant">
-  <p>
- Ok
+
+
+
+  
+<article class="interlocuteur">
+  <p class="msg">
+    Définition : c’est une transformation de ressources dans le but de créer des biens et des services. Pour cela il va falloir coordonner et faire circuler des flux de création de valeurs, tout en assurant la ponctualité des rendez-vous avec le besoin client. 
+
   </p>
+  <p class="datetime"><i class="fa fa-check-square-o"></i> 10:16 - 10.02.2014</p>
 </article>
+
+<article class="intervenant">
+  <p class="msg">
+   Une entreprise gagne de l’argent en transformant un produit et en se rémunerant sur cette transformation. La création de valeur pour une entreprise est de générer  un profit par le biais de la transformation de produit. 
+   Les contraintes de temps se renforcent et la concurrence pousse l’entreprise à faire plus. L’entreprise est de plus en plus dépendante de son environnement. une réorganisation des méthodes de production et de management associées. 
+   Les contraintes de temps se renforcent et la concurrence pousse l’entreprise à faire plus. L’entreprise est de plus en plus dépendante de son environnement. une réorganisation des méthodes de production et de management associées. 
+  </p>
+  <p class="datetime"><i class="fa fa-check-square-o"></i> 10:16 - 10.02.2014</p>
+</article>
+
+
+<article class="interlocuteur">
+  <p class="msg">
+    Définition : c’est une transformation de ressources dans le but de créer des biens et des services. Pour cela il va falloir coordonner et faire circuler des flux de création de valeurs, tout en assurant la ponctualité des rendez-vous avec le besoin client. 
+
+  </p>
+  <p class="datetime"><i class="fa fa-check-square-o"></i> 10:16 - 10.02.2014</p>
+</article>
+
+<article class="intervenant">
+  <p class="msg">
+ Ok, super cool ! 
+  </p>
+   <p class="datetime"><i class="fa fa-check-square-o"></i> 10:16 - 10.02.2014</p>
+</article>
+
 
 
 </div>
