--- a/www/chargement.html
+++ b/www/chargement.html
@@ -25,12 +25,14 @@
   <h4><i class="fa fa-refresh fa-5x fa-spin"></i></h4>
 
 <div class="msg_chargement">
-  <h5 id="1" style="display:none;">Chargement de votre dernière dispute avec votre copine..  </h5>
-  <h5 id="2" style="display:none;">Chargement de votre dernière conversation avec votre ex-copine.. </h5>
-  <h5 id="3" style="display:none;">Suppression de vos messages compromettants .. </h5>
-  <h5 id="4" style="display:none;">Transmission de tous vos petits secrets à la NSA..</h5>
-  <h5 id="5" style="display:none;">Chargement de vos conversations abasourdissantes .. </h5>
-  <h5 id="6" style="display:none;">Mise en route de l'usine à émoticônes.. </h5> 
+  <h5  style="display:none;">Chargement de votre dernière dispute avec votre copine..  </h5>
+  <h5 style="display:none;">Chargement de votre dernière conversation avec votre ex-copine.. </h5>
+  <h5 style="display:none;">Suppression de vos messages compromettants .. </h5>
+  <h5  style="display:none;">Transmission de tous vos petits secrets à la NSA..</h5>
+
+  <h5  style="display:none;">Chargement de vos conversations abasourdissantes .. </h5>
+  <h5 style="display:none;">Mise en route de l'usine à émoticônes.. </h5> 
+    <h5 style="display:none;">Allez courage ça ne devrait plus être très long, tout est en place maintenant.</h5> 
 </div>
   
 </div>
